--- a/style.css
+++ b/style.css
@@ -73,8 +73,6 @@ ul li :hover {
     width: 330px;
     float: left;
     margin-left: 270px;
-
-
 }
 
 .srch {
@@ -320,9 +318,23 @@ ul li :hover {
 }
     }
    @media screen and (max-width:450px) {
+    .content h1 {
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 300px;
+        margin-left: 20px;
+        margin-top: 9%;
+        letter-spacing: 2px;
+    }
+    .content span{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 80px;
+        margin-left: 20px;
+        margin-top: 9%;
+        letter-spacing: 2px;
+    }
     .logo{
         margin-left: 140px;
-        font-size: 4vw;
+        font-size: 6vw;
     }
     ul{
         margin-top: -25px;
@@ -330,11 +342,77 @@ ul li :hover {
     ul li{
         margin-left: 42px;
     }
-    ul li a{
+    
         font-size: 2vw;
     }
     .search{
-        margin-top: -40px;
-        margin-left: 38px;
+        margin-top: 8px;
+        margin-left: 48px;
     }
+            
+.form {
+    width: 70%;
+    height: 500px;
+    background: linear-gradient(to top, rgb(66, 59, 59)50%, rgb(66, 59, 59)50%);
+    position: absolute;
+    top: 420px;
+    left: 50px;
+    border-radius: 10px;
+   
+    margin-left: 5%;
+    margin-right: 8%;
+}
+
+.form input {
+    width: 100%;
+    height: 60px;
+    background: transparent;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    margin-top: 55px;
+    font-size: 55px;
+}
+ul li {
+    list-style: none;
+    margin-left: 5px;
+    margin-top: 42px;
+    
+}
+
+ul li a {
+    text-decoration: none;
+    color: rgb(9, 26, 9);
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    transition: 0.4s ease-in-out;
+    font-size: 50px;
+}
+.form h2 {
+    width: 380px;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    color: #000;
+    font-size: 55px;
+    background-color: aliceblue;
+    border-radius: 10px;
+    margin: 2px;
+    padding: 8px 23px;
+}
+.btnn {
+    width: 420px;
+    height: 100px;
+    background: rgb(158, 202, 54);
+    border: none;
+    margin-top: 30px;
+    font-size: 50px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: aliceblue;
+    padding: 20px;
+}
+
+.content .par{
+    font: size 120px;
+}
    }
